syntax = "proto3";

package meshmail;
option java_package = "app.meshmail.data.protobuf";

message Message {
  string serverId = 1;
  string subject = 2;
  string body = 3;
  string recipient = 4;
  string sender = 5;
  uint64 receivedDate = 6;
  string fingerprint = 7;
  string type = 8;  // INBOUND or OUTBOUND
  bytes data = 10; // to be used for compressed messages or future expansion for attachments
}